--- a/style.css
+++ b/style.css
@@ -1,12 +1,205 @@
 *{
 margin: 0;
 padding: 0;
+outline: none;
 }
 .content{
   position: relative;
   padding: 40px 60px;
-  color: #fff;
-  text-align: center;
+  color: #000;
+  min-width:710px;
   transition: 0.5s;
-  z-index: 1000;
+}
+body{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  background: #001925;
+  overflow: hidden;
+}
+h1{
+  background: #03a9f4;
+  position: relative;
+  padding: 10px 0% 10px 0%;
+  text-align: center;
+  border-radius: 10px;
+}
+.left{
+  float: left;
+  margin-left: 55px;
+}
+.left h3{
+  color: #fff;
+  font-size: 20px;
+  margin-left: 35px;
+}
+/************Select************/
+select{
+  outline: none;
+  box-shadow: none;
+  background: #2c3e50;
+  border: 0 !important;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0 0 0 .5em;
+  color: #fff;
+  font-size: 1em;
+  letter-spacing: .8px;
+  cursor: pointer;
+}
+.select{
+  margin-left: 35px;
+  position: relative;
+  display: block;
+  width: 20em;
+  height: 3em;
+  background: #2c3e50;
+  line-height: 3;
+  border-radius: .35em;
+}
+.select::after{
+  content: '\25bc';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 1em;
+  background: #34495e;
+  pointer-events: none;
+  transition: .2s all ease;
+}
+.select:hover::after{
+  color: #31a3e4;
+}
+
+/************Radiobutton************/
+.list{
+  padding: 5px 75px 10px 30px;
+  position: relative;
+}
+.list h3{
+  color: #fff;
+  font-size: 30px;
+  padding: 5px 0;
+  margin-left: 10px;
+  display: inline-block;
+}
+.list label{
+  position: relative;
+  display: block;
+  margin: 0 20pt;
+  color: #fff;
+  font-size: 24px;
+}
+.list input[type="radio"]{
+ -webkit-appearance:none;
+}
+/*.list b{
+  position: absolute;
+  top:2px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #fff;
+  border-radius: 15%;
+}*/
+.list i{
+  position: absolute;
+  top:2px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #fff;
+  border-radius: 15%;
+  transition: .5s;
+}
+.list input[type="radio"]:checked~i{
+  top: 1px;
+  border-top: none;
+  border-right: none;
+  height: 15px;
+  width: 25px;
+transform: rotate(-45deg);
+  transition: .5s;
+}
+.list span{
+  position: relative;
+  left: 40px;
+  transition: 0.5s;
+}
+/*.list span:before{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #fff;
+  transform: translateY(-50%) scaleX(0);
+}*/
+
+/************Textbox************/
+.right{
+   float: right;
+}
+.right h3{
+  color: #fff;
+  font-size: 20px;
+  margin-left: 55px;
+}
+.text{
+  position: relative;
+  margin-right: 75px;
+ padding: 10;
+ margin-top: 10px;
+ margin-bottom: 110px;
+ font-size: 12pt;
+ border-radius: 15pt;
+ background: #2c3e50;
+ color: #fff;
+}
+/************Button************/
+button{
+  margin-left: 10px;
+    display:block;
+    background-color: #000;
+    border: 1px solid #000;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+    padding: 20px 60px;
+    text-align: center;
+    transition: 1s;
+}
+button:hover {
+    opacity:.85;
+    cursor: pointer;
+    background-color: white;
+      color: black;
+          transition: 1s;
+}
+button:active {
+  background-color: #000000;
+    color: white;
+}
+.down{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	text-align: center;
+  color: #fff;
+}
+.down h3{
+  padding: 15px;
+  display: none;
+  margin: 10;
+}
+.down h2{
+font-size: 26pt;
+letter-spacing: 15px;
+}
+@media(max-width: 1130px){
+  .down{
+  clear: both;
+}
 }
