--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ body{
   justify-content: center;
   align-items: center;
   background: #001925;
-  overflow: hidden;
+}
+.bd{
+   overflow: hidden;
 }
 h1{
   background: #03a9f4;
@@ -27,6 +29,8 @@ h1{
 .left{
   float: left;
   margin-left: 55px;
+  //width: 350px;
+//  height: 300px;
 }
 .left h3{
   color: #fff;
@@ -88,25 +92,64 @@ select{
 .list label{
   position: relative;
   display: block;
-  margin: 0 20pt;
+  margin-left: 5px;
+  margin: 0 10pt;
   color: #fff;
   font-size: 24px;
 }
 .list input[type="radio"]{
  -webkit-appearance:none;
 }
-/*.list b{
+.list b{
   position: absolute;
-  top:2px;
+  border: 2px solid #fff;
+  left: 10px;
+  width: 27px;
+  height: 27px;
+  border-radius: 15%;
+  opacity:0.4;
+}
+.list b:hover{
+  opacity: 1;
+  transition: .5s;
+  border: none;
+
+}
+.list b:before, .list b:after{
+  position: absolute;
+  content: '';
+  right: .45em;
+  height: 35px;
+  width: 2px;
+  background-color: #fff;
+  opacity:0;
+  transition: .5s;
+}
+.list b:hover:before{
+  transform: rotate(-45deg);
+  transition: .5s;
+  opacity:1;
+
+}
+.list b:hover:after{
+  transform: rotate(45deg);
+  opacity:1;
+  transition: .5s
+}
+  /*font-size: 25pt;
+  border: 2px solid #fff;
+  position: absolute;
   display: inline-block;
+  top: 2px;
   width: 25px;
   height: 25px;
-  border: 2px solid #fff;
-  border-radius: 15%;
-}*/
+  border-radius: 15%;*/
 .list i{
+//  transform: rotate(-45deg);
   position: absolute;
+  left: 10px;
   top:2px;
+  margin-bottom: 10px;
   display: inline-block;
   width: 25px;
   height: 25px;
@@ -153,15 +196,21 @@ transform: rotate(-45deg);
   margin-right: 75px;
  padding: 10;
  margin-top: 10px;
- margin-bottom: 110px;
+ margin-bottom: 40px;
  font-size: 12pt;
  border-radius: 15pt;
  background: #2c3e50;
  color: #fff;
 }
 /************Button************/
+#butt{
+  margin-left: 30px;
+  display: none;
+}
 button{
-  margin-left: 10px;
+    float: center;
+    margin: 10px;
+    margin-left: 5px;
     display:block;
     background-color: #000;
     border: 1px solid #000;
@@ -183,11 +232,16 @@ button:active {
   background-color: #000000;
     color: white;
 }
+/************Down************/
 .down{
+   //clear: both;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	text-align: center;
   color: #fff;
+}
+#ND{
+	margin-bottom:50px;
 }
 .down h3{
   padding: 15px;
@@ -198,8 +252,59 @@ button:active {
 font-size: 26pt;
 letter-spacing: 15px;
 }
+
+/************Table************/
+
+table {
+    border-collapse: collapse;
+    border: 4px solid #2c3e50;
+    align-items: center;
+    //margin: 1em 2em 3em 3em;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+td, th {
+    font-size: 14pt;
+    border: 4px solid #2c3e50;
+    color: #fff;
+}
+
+td {
+    text-align: center;
+    padding-bottom: 30px;
+    transition: all .5s ease;
+}
+
+th:first-child, td:first-child {
+    text-align: left;
+    width: 50px;
+}
+
+/*td > label {
+    display: block;
+    cursor: pointer;
+}
+
+td:hover:not(:first-child) {
+    background: #fff379;
+}
+
+input[type=radio] {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+}
+
+*/
+
 @media(max-width: 1130px){
   .down{
   clear: both;
 }
 }
+::-webkit-scrollbar{ width: 10px;}
+::-webkit-scrollbar-button {  background-color: #2c3e50; border-radius: 3px;}
+//::-webkit-scrollbar-track {  background-color: #001925;}
+::-webkit-scrollbar-track-piece { background-color: #001925;}
+::-webkit-scrollbar-thumb { background-color: #03a9f4; border-radius: 3px;}
